--- a/web/WEB-INF/templates/layout.xhtml
+++ b/web/WEB-INF/templates/layout.xhtml
@@ -6,29 +6,28 @@
 	  xmlns:ui="http://java.sun.com/jsf/facelets"
 	  xmlns:p="http://primefaces.org/ui">
 <h:head>
-	<title>Title</title>
+	<f:facet name="first">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+
+		<title>Bootstrap Layout</title>
+	</f:facet>
+
+	<f:facet name="middle">
+		<h:outputStylesheet name="bootstrap/css/bootstrap.css" />
+        <h:outputStylesheet name="css/dashboard.css" />
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js" />
+        <h:outputScript name="bootstrap/js/bootstrap.js" />
+	</f:facet>
+
+	<f:facet name="last">
+
+	</f:facet>
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
 </h:head>
 <h:body>
-	<p:layout fullPage="true">
-		<p:layoutUnit position="north" size="100" header="Top" resizable="true" closable="true" collapsible="true">
-			<h:outputText value="Top unit content." />
-		</p:layoutUnit>
-
-		<p:layoutUnit position="south" size="100" header="Bottom" resizable="true" closable="true" collapsible="true">
-			<h:outputText value="South unit content." />
-		</p:layoutUnit>
-
-		<p:layoutUnit position="west" size="200" header="Left" resizable="true" closable="true" collapsible="true">
-
-		</p:layoutUnit>
-
-		<p:layoutUnit position="east" size="200" header="Right" resizable="true" closable="true" collapsible="true" effect="drop">
-			<h:outputText value="Right unit content." />
-		</p:layoutUnit>
-
-		<p:layoutUnit position="center">
-			<ui:insert name="content">Put default content here, if any.</ui:insert>
-		</p:layoutUnit>
-	</p:layout>
+    <ui:include src="header.xhtml" />
+    <ui:include src="content.xhtml" />
 </h:body>
 </html>
