--- a/web/WEB-INF/templates/menu.xhtml
+++ b/web/WEB-INF/templates/menu.xhtml
@@ -4,23 +4,10 @@
 
 <ui:composition>
 
-	<ul class="nav nav-sidebar">
-		<li class="active"><a href="#">Overview</a></li>
-		<li><a href="#">Reports</a></li>
-		<li><a href="#">Analytics</a></li>
-		<li><a href="#">Export</a></li>
-	</ul>
-	<ul class="nav nav-sidebar">
-		<li><a href="">Nav item</a></li>
-		<li><a href="">Nav item again</a></li>
-		<li><a href="">One more nav</a></li>
-		<li><a href="">Another nav item</a></li>
-		<li><a href="">More navigation</a></li>
-	</ul>
-	<ul class="nav nav-sidebar">
-		<li><a href="">Nav item again</a></li>
-		<li><a href="">One more nav</a></li>
-		<li><a href="">Another nav item</a></li>
-	</ul>
+	<li class="active"><a href="#">Dashboard</a></li>
+	<li><a href="#">Age</a></li>
+	<li><a href="#">Gender</a></li>
+	<li><a href="#">Geo</a></li>
+
 </ui:composition>
 </html>
