--- a/web/WEB-INF/templates/dashboard.xhtml
+++ b/web/WEB-INF/templates/dashboard.xhtml
@@ -1,61 +1,60 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+<html lang="en"
+      xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:p="http://primefaces.org/ui">
 <h:head>
 	<f:facet name="first">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-
-		<title>Bootstrap Layout</title>
+		<title>W3C Dashboard Layout</title>
 	</f:facet>
     <f:facet name="middle">
-        <h:outputStylesheet name="bootstrap/css/bootstrap.css" />
-        <h:outputStylesheet name="css/dashboard.css" />
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"/>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"/>
+        <h:outputStylesheet name="css/w3c_dashboard.css" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
     </f:facet>
-
 </h:head>
-<body>
 
-<nav class="navbar navbar-inverse visible-xs">
-	<div class="container-fluid">
-		<div class="navbar-header">
-			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-				<span class="icon-bar"/>
-				<span class="icon-bar"/>
-				<span class="icon-bar"/>
-			</button>
-			<a class="navbar-brand" href="#">Logo</a>
-		</div>
-		<div class="collapse navbar-collapse" id="myNavbar">
-			<ul class="nav navbar-nav">
-                <ui:include src="menu.xhtml" />
-			</ul>
-		</div>
-	</div>
-</nav>
+<body class="w3-light-grey">
 
-<div class="container-fluid">
-	<div class="row content">
-		<div class="col-sm-3 sidenav hidden-xs">
-			<h2>Logo</h2>
-			<ul class="nav nav-pills nav-stacked">
-                <ui:include src="menu.xhtml" />
-			</ul>
-            <br/>
-		</div>
-		<br/>
+    <ui:include src="header.xhtml"/>
+    <ui:include src="menu.xhtml"/>
 
-		<div class="col-sm-9">
-            <ui:insert name="content" />
-		</div>
-	</div>
-</div>
+    <div class="w3-main" style="margin-left:300px;margin-top:43px;">
+
+        <ui:insert name="content" />
+        <ui:include src="footer.xhtml"/>
+
+    </div>
+
+<script>
+    // Get the Sidebar
+    var mySidebar = document.getElementById("mySidebar");
+
+    // Get the DIV with overlay effect
+    var overlayBg = document.getElementById("myOverlay");
+
+    // Toggle between showing and hiding the sidebar, and add overlay effect
+    function w3_open() {
+        if (mySidebar.style.display === 'block') {
+            mySidebar.style.display = 'none';
+            overlayBg.style.display = "none";
+        } else {
+            mySidebar.style.display = 'block';
+            overlayBg.style.display = "block";
+        }
+    }
+
+    // Close the sidebar with the close button
+    function w3_close() {
+        mySidebar.style.display = "none";
+        overlayBg.style.display = "none";
+    }
+</script>
 
 </body>
 </html>
