customized css override on the structural elements( header, sidebar, main container, footer ) on the W3School dashboard template

--- a/web/WEB-INF/templates/menu.xhtml
+++ b/web/WEB-INF/templates/menu.xhtml
@@ -5,7 +5,7 @@
 <ui:composition>
 
     <!-- Sidebar/menu -->
-    <nav class="w3-sidebar w3-collapse w3-white w3-animate-left" style="z-index:3;width:300px;" id="mySidebar">
+    <nav class="template-sidebar w3-sidebar w3-collapse w3-white w3-animate-left" id="mySidebar">
 
         <ui:include src="user.xhtml"/>
 
