--- a/web/WEB-INF/templates/user.xhtml
+++ b/web/WEB-INF/templates/user.xhtml
@@ -6,7 +6,7 @@
 <ui:composition>
 
     <br/>
-    <div class="w3-container w3-row">
+    <div class="template-user w3-container w3-row">
         <div class="w3-col s4">
             <h:graphicImage name="images/avatar2.png" class="w3-circle w3-margin-right" style="width:46px"/>
         </div>
