--- a/web/WEB-INF/templates/dashboard.xhtml
+++ b/web/WEB-INF/templates/dashboard.xhtml
@@ -15,6 +15,7 @@
 	</f:facet>
     <f:facet name="middle">
         <h:outputStylesheet name="css/w3c_dashboard.css" />
+        <h:outputStylesheet name="css/template.css"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
     </f:facet>
 </h:head>
@@ -24,7 +25,7 @@
     <ui:include src="header.xhtml"/>
     <ui:include src="menu.xhtml"/>
 
-    <div class="w3-main" style="margin-left:300px;margin-top:43px;">
+    <div class="template-main w3-main">
 
         <ui:insert name="content" />
         <ui:include src="footer.xhtml"/>
