--- a/web/WEB-INF/templates/footer.xhtml
+++ b/web/WEB-INF/templates/footer.xhtml
@@ -5,7 +5,7 @@
 <ui:composition>
 
 	<!-- Footer -->
-	<footer class="w3-container w3-padding-16 w3-light-grey">
+	<footer class="template-footer w3-container w3-padding-16 w3-light-grey">
 		<h4>FOOTER</h4>
 		<p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
 	</footer>
